# hdcfacedetection

./: .gitignore  CMakeLists.txt  README.md  generate_seed_vectors.py  random_seed_vectors.txt  trained_model.txt
include/: ap.h
src/: AntiTheft.cpp  AntiTheft_workload.cpp  AntiTheft_workload.h  main.cpp
